<resources>
    <string name="app_name">WhatsApp Clone</string>

    <string name="welcome_to_whatsapp">Welcome to WhatsApp</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="read_our_privacy_policy">Read Our Privacy Policy. Tap \'Agree and Continue\' to accept Terms of service</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="verify_your_phone_number">WhatsApp will send an SMS message to verify your phone number.What\'s my number?</string>
    <string name="countrycode">254</string>
    <string name="phone_number">phone number</string>
    <string name="countrycode_">+</string>
    <string name="carrier_sms">Carrier SMS charges may apply</string>
    <string name="next">Next</string>
    <string name="enter_code">Enter Code</string>
    <string name="name">Name</string>
    <string name="provide_your_name">Please provide your name and an optional profile photo</string>
    <string name="profile_info">Profile Info</string>
    <string name="new_group">New group</string>
    <string name="new_brodcast">New Brodcast</string>
    <string name="whatsapp_web">WhatsApp Web</string>
    <string name="starred_messages">Starred messages</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="invite_your_friends">Invite Your Friends</string>
    <string name="none_of_your_contacts">None of your contacts are using WhatsApp.\nUse the Button below to invite them.</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="chat_with_your_friends_who">Chat with your friends who use WhatsApp on Iphone,\n Android, KaiOS phone</string>
    <string name="username">Username</string>
    <string name="using_whatsapp">Hey there! I am using WhatsApp</string>
    <string name="privacy_security_change_number">Privacy, security, change number</string>
    <string name="account">Account</string>
    <string name="chats">Chats</string>
    <string name="theme_wallpapers_chat_history">Theme, wallpapers, chat history</string>
    <string name="notifications">Notifications</string>
    <string name="message_group_amp_call_tones"><![CDATA[Message, group & call tones]]></string>
    <string name="network_usage_auto_download">Network usage, auto-download</string>
    <string name="data_and_storage_usage">Data and storage usage</string>
    <string name="help">Help</string>
    <string name="faq_contact_us_privacy_policy">FAQ, contact us, privacy policy</string>
    <string name="from">from</string>
    <string name="f_a_c_e_b_o_o_k">F A C E B O O K</string>
    <string name="this_is_not_your_username_or_pin">This is not your username or pin. This name will be visible to your WhatsApp contacts.</string>
    <string name="about">About  </string>
    <string name="phone">Phone</string>
    <string name="dummy_phonenumber">+254 100358957</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="hint_your_name">your name</string>
    <string name="cancel">CANCEL&#10060;</string>
    <string name="save">SAVE &#10004;</string>
    <string name="log_out">LOG OUT</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="add_about">Add About</string>
    <string name="last_seen">last seen today at 1:50 PM</string>
    <string name="type_a_message">Type a message</string>
    <string name="my_status">My Status</string>
    <string name="tap_to_add_status_update">Tap to add status update</string>
    <string name="sample_message">This is a text Message</string>
    <string name="mute_notification">Mute Notification</string>
    <string name="custom_notifications">Custom Notifications</string>
    <string name="media_visisbility">Media Visisbility</string>
    <string name="encryption">Encryption</string>
    <string name="messages_encryption">Messages to this chat and calls are secured with end-to-end encryption. Tap to verify</string>
    <string name="about_and_phone">About and phone number</string>
    <string name="dummy_date">June 24</string>
    <string name="other_phones">Other phones</string>
    <string name="mobile">Mobile</string>
    <string name="block">Block</string>
    <string name="report_contact">Report contact</string>
    <string name="document">Document</string>
    <string name="room">Room</string>
    <string name="audio">Audio</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="time">28 minutes ago</string>
    <string name="description">Description</string>
    <string name="date_status">Today, 1:00 PM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>