<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Authentication.PhoneLoginActivity">

    <LinearLayout
        android:id="@+id/top_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/enter_phone_number"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more"
            android:tint="@android:color/background_dark"
            android:contentDescription="@string/app_name"
            android:background="@android:color/transparent"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:text="@string/verify_your_phone_number"/>

        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:prompt="Kenya"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countrycode_"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:hint="@string/countrycode"/>

        <EditText
           android:layout_width="200dp"
           android:layout_height="wrap_content"
           android:hint="@string/phone_number"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:text="@string/carrier_sms"/>



    </LinearLayout>



</RelativeLayout>