<?xml version="1.0" encoding="utf-8"?>
<layout>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CallsFragment">

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recycler_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>

   <LinearLayout
       android:id="@+id/layout_invite"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center_horizontal"
       android:layout_marginTop="30dp"
       android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/invite_your_friends"
          android:textSize="25sp"
          android:textColor="@android:color/black"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/none_of_your_contacts"
          android:gravity="center_horizontal"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="20dp"/>

      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="#0BA500"
          android:layout_marginStart="30dp"
          android:layout_marginEnd="30dp"
          android:textColor="@android:color/white"
          android:text="@string/invite_a_friend"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/chat_with_your_friends_who"
          android:gravity="center_horizontal"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="20dp"/>

   </LinearLayout>
</FrameLayout>
</layout>