<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/pick_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:paddingTop="30dp"
        android:text="@string/enter_your_name"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/hint_your_name"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              
              <TextView
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"/>

              <Button
                  android:id="@+id/cancel_button"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/cancel"
                  android:textColor="@color/colorPrimary"
                  android:background="@android:color/transparent"/>

              <Button
                  android:id="@+id/save_button"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/save"
                  android:textColor="@color/colorPrimary"
                  android:background="@android:color/transparent"/>

          </LinearLayout>

    </LinearLayout>

</LinearLayout>