<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.SetUserInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_info"
            android:textSize="17sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provide_your_name"
            android:textSize="14sp"
            android:textColor="#5C5A5A"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp" />
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/profile_image"
            android:layout_margin="20dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimary"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/name"/>

    </LinearLayout>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="#11E302"
        android:textColor="@android:color/white"/>

</RelativeLayout>