<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorWhite"
    tools:context=".Activity.UserProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Light">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            tools:targetApi="lollipop"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image_profile"
                android:transitionName="image_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile_image"
                android:scaleType="centerCrop"
                android:contentDescription="@string/app_name"
                app:layout_collapseMode="parallax"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:titleTextColor="@color/colorWhite"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Title"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:subtitleTextColor="@color/colorWhite"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F4F4F4"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/mute_notification"
               android:padding="15dp"
               android:textSize="14sp"
               android:layout_marginBottom="1dp"
               android:background="@color/colorWhite"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/custom_notifications"
                android:padding="15dp"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="1dp"
                android:background="@color/colorWhite"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/media_visisbility"
                android:padding="15dp"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="1dp"
                android:background="@color/colorWhite"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/encryption"
                    android:textColor="@color/colorBlack"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/messages_encryption"
                        android:textColor="#575656"/>
                    
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_lock"
                        android:tint="@color/colorPrimary"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:padding="15dp"
               android:background="@color/colorWhite">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/about_and_phone"
                   android:textColor="@color/colorPrimary"
                   android:textSize="15sp" />

               <TextView
                   android:id="@+id/about_text"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/about"
                   android:textSize="15sp"
                   android:textColor="@color/colorBlack" />

               <TextView

                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/dummy_date"
                   android:textSize="14sp"
                   android:textColor="@android:color/darker_gray" />

           </LinearLayout>

            <LinearLayout
                android:layout_marginTop="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phoneNumber_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingStart="16dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_phonenumber"
                    android:textColor="@color/colorBlack"
                    android:paddingLeft="16dp"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_chat"
                    android:contentDescription="@string/app_name"
                    android:layout_marginLeft="20dp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_call"
                    android:contentDescription="@string/app_name"
                    android:layout_marginLeft="20dp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_videocam"
                    android:contentDescription="@string/app_name"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="@color/colorWhite">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_phones"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/other_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_phonenumber"
                    android:textSize="15sp"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_block"
                    android:tint="@android:color/holo_red_dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/block"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="15sp"
                    android:layout_marginLeft="25dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_thumb_down"
                    android:tint="@android:color/holo_red_dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/report_contact"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="15sp"
                    android:layout_marginLeft="25dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>